[gd_scene load_steps=17 format=2]

[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_set.png" type="Texture" id=1]
[ext_resource path="res://characters/char/Char.tscn" type="PackedScene" id=2]
[ext_resource path="res://chapters/01_hadoscaphe/common_resources/HadDoorButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/Reactor.gd" type="Script" id=4]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_background.png" type="Texture" id=5]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_door_right.png" type="Texture" id=6]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_foreground.png" type="Texture" id=7]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_engine.png" type="Texture" id=8]
[ext_resource path="res://chapters/01_hadoscaphe/locations/reactor/reactor_redlight.png" type="Texture" id=9]
[ext_resource path="res://objects/SlidingDoor.tscn" type="PackedScene" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float u_amount = 0.01;

float get_noise(vec2 uv) {
    return fract(sin(dot(uv ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
    float n = 2.0 * get_noise(UV + vec2(TIME, 0.0)) - 1.0;
    COLOR = texture(TEXTURE, UV) + n * u_amount;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/u_amount = 0.01

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.668966 )
colors = PoolColorArray( 0.776471, 0.635294, 0, 0, 1, 0.820313, 0, 1 )

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 377, 156, 396, 166, 269, 140, 259, 131, 273, 143, 268, 143, 268, 144, 211, 145, 213, 131 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 5 ), PoolIntArray( 6, 7, 8, 3, 5 ), PoolIntArray( 5, 3, 2 ) ]
outlines = [ PoolVector2Array( 213, 131, 211, 145, 268, 144, 268, 143, 273, 143, 269, 140, 396, 166, 377, 156, 259, 131 ) ]

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "moving"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Reactor" type="Node2D"]
material = SubResource( 2 )
position = Vector2( 1, 0 )
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 389, 140 )
texture = ExtResource( 5 )
hframes = 2

[node name="DoorRight" parent="." instance=ExtResource( 12 )]
position = Vector2( 356, 135 )
to_room = "maintenance"
to_x = 41
to_y = 106
door_id = 7

[node name="CollisionPolygon2D" parent="DoorRight" index="0"]
polygon = PoolVector2Array( 26, 22, 40, 29, 40, -18, 26, -20 )

[node name="PointToRoom" parent="DoorRight" index="1"]
position = Vector2( 28, 26 )

[node name="Sprite" parent="DoorRight" index="2"]
position = Vector2( 33, 5 )
texture = ExtResource( 6 )

[node name="Set" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="RightDoorButton" parent="." instance=ExtResource( 3 )]
position = Vector2( 372, 134 )
action_name = "RightDoorButton"
action_type = "push"
door_id = 7

[node name="Char" parent="." instance=ExtResource( 2 )]

[node name="Line2D" parent="Char" index="0"]
visible = false
points = PoolVector2Array( 319.547, 149.936 )
default_color = Color( 1, 0.796078, 0, 1 )
gradient = SubResource( 3 )

[node name="Sprite" parent="Char" index="1"]
position = Vector2( 242, 138 )

[node name="Eyes" parent="Char/Sprite" index="1"]
position = Vector2( 1, -37 )

[node name="EyesPosition" parent="Char/Sprite" index="3"]
visible = false

[node name="NavigationPolygonInstance" parent="Char/Navigation2D" index="0"]
visible = false
position = Vector2( -1, 0 )
navpoly = SubResource( 4 )

[node name="Foreground" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( 242, 139 )
texture = ExtResource( 7 )

[node name="RedLight" type="Sprite" parent="."]
position = Vector2( 325, 125 )
texture = ExtResource( 9 )

[node name="Engine" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 154, 121 )
texture = ExtResource( 8 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine"]
autoplay = "default"
anims/default = SubResource( 5 )
anims/moving = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]
[connection signal="order_interaction" from="RightDoorButton" to="." method="_on_RightDoorButton_order_interaction"]

[editable path="DoorRight"]

[editable path="Char"]
